--- a/flipbook-site/frontend/index.html
+++ b/flipbook-site/frontend/index.html
@@ -16,7 +16,7 @@
   <p id="status"></p>
 
   <script>
-    const backendUrl = "https://your-flipbook-backend.onrender.com"; // CHANGE THIS
+    const backendUrl = "https://flipbook-site.onrender.com"; // CHANGE THIS
 
     document.getElementById("uploadForm").addEventListener("submit", async (e) => {
       e.preventDefault();
@@ -42,3 +42,4 @@
   </script>
 </body>
 </html>
+
