--- a/frontend/flipbook.html
+++ b/frontend/flipbook.html
@@ -7,76 +7,76 @@
   <script src="https://cdn.jsdelivr.net/npm/stpageflip@2.0.7/dist/page-flip.browser.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/stpageflip@2.0.7/dist/page-flip.browser.min.css">
   <style>
-    body { display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
-    #flipbook { width: 80%; height: 90%; }
+    body { display: flex; flex-direction: column; align-items: center; margin: 0; padding: 20px; }
+    #flipbook { width: 600px; height: 800px; margin-top: 20px; }
+    ul { list-style: none; padding: 0; }
+    li { margin: 5px 0; }
+    a { text-decoration: none; color: blue; cursor: pointer; }
   </style>
 </head>
 <body>
+  <h1>Flipbook Viewer</h1>
+  <ul id="pdf-list"></ul>
   <div id="flipbook"></div>
 
- <script>
-const flipbook = document.getElementById("flipbook");
-let pageFlip;
+  <script>
+    const flipbookContainer = document.getElementById("flipbook");
+    const pdfListContainer = document.getElementById("pdf-list");
+    let pageFlip;
 
-// Fetch uploaded PDFs
-async function fetchPDFs() {
-  const res = await fetch("/files");
-  const pdfs = await res.json();
+    // Load all uploaded PDFs
+    async function loadPDFList() {
+      const res = await fetch("/files");
+      const pdfs = await res.json();
 
-  // If no PDFs, show message
-  if (!pdfs.length) {
-    flipbook.innerHTML = "<p>No PDFs uploaded yet.</p>";
-    return;
-  }
+      if (pdfs.length === 0) {
+        pdfListContainer.innerHTML = "<li>No PDFs uploaded yet.</li>";
+        return;
+      }
 
-  // Create a list of links
-  const list = document.createElement("ul");
-  pdfs.forEach(url => {
-    const li = document.createElement("li");
-    const a = document.createElement("a");
-    a.href = "#";
-    a.textContent = url.split("/").pop();
-    a.onclick = () => loadPDF(url);
-    li.appendChild(a);
-    list.appendChild(li);
-  });
+      pdfListContainer.innerHTML = "";
+      pdfs.forEach(url => {
+        const li = document.createElement("li");
+        const a = document.createElement("a");
+        a.textContent = url.split("/").pop();
+        a.onclick = () => loadPDF(url);
+        li.appendChild(a);
+        pdfListContainer.appendChild(li);
+      });
 
-  flipbook.innerHTML = "";
-  flipbook.appendChild(list);
-}
+      // Automatically load the first PDF
+      loadPDF(pdfs[0]);
+    }
 
-// Load a PDF into the flipbook
-async function loadPDF(url) {
-  const pdf = await pdfjsLib.getDocument(url).promise;
-  flipbook.innerHTML = ""; // clear previous content
+    async function loadPDF(url) {
+      flipbookContainer.innerHTML = ""; // clear previous flipbook
 
-  pageFlip = new St.PageFlip(flipbook, {
-    width: 600,
-    height: 800,
-    size: "stretch",
-    drawShadow: true,
-    showCover: true
-  });
+      const pdf = await pdfjsLib.getDocument(url).promise;
+      pageFlip = new St.PageFlip(flipbookContainer, {
+        width: 600,
+        height: 800,
+        size: "stretch",
+        drawShadow: true,
+        showCover: true
+      });
 
-  for (let i = 1; i <= pdf.numPages; i++) {
-    const page = await pdf.getPage(i);
-    const viewport = page.getViewport({ scale: 1.5 });
-    const canvas = document.createElement("canvas");
-    canvas.width = viewport.width;
-    canvas.height = viewport.height;
+      for (let i = 1; i <= pdf.numPages; i++) {
+        const page = await pdf.getPage(i);
+        const viewport = page.getViewport({ scale: 1.5 });
+        const canvas = document.createElement("canvas");
+        canvas.width = viewport.width;
+        canvas.height = viewport.height;
 
-    const ctx = canvas.getContext("2d");
-    await page.render({ canvasContext: ctx, viewport }).promise;
+        const ctx = canvas.getContext("2d");
+        await page.render({ canvasContext: ctx, viewport }).promise;
 
-    pageFlip.loadFromHTML([
-      { type: "image", src: canvas.toDataURL(), width: 600, height: 800 }
-    ]);
-  }
-}
+        pageFlip.loadFromHTML([
+          { type: "image", src: canvas.toDataURL(), width: 600, height: 800 }
+        ]);
+      }
+    }
 
-// Initialize
-fetchPDFs();
-</script>
+    loadPDFList();
+  </script>
 </body>
 </html>
-
